[gd_scene load_steps=6 format=3 uid="uid://bdoa0xo7uidex"]

[ext_resource type="Script" path="res://night_scene.gd" id="1_nbex0"]
[ext_resource type="Texture2D" uid="uid://dcxn07fkppqms" path="res://assets/background_night.png" id="3_hxwy1"]
[ext_resource type="Texture2D" uid="uid://clh14jesq3k71" path="res://assets/moon_full.png" id="3_xbrxs"]
[ext_resource type="Texture2D" uid="uid://cchray2aw6yw6" path="res://assets/window_frame.png" id="4_1vrvo"]
[ext_resource type="Texture2D" uid="uid://dxiq4cotupawv" path="res://assets/windows_night_sky.png" id="5_mn4my"]

[node name="Node2D" type="Node2D"]
position = Vector2(8, 56)

[node name="night_scene" type="Node" parent="."]
script = ExtResource("1_nbex0")

[node name="Camera2D" type="Camera2D" parent="night_scene"]

[node name="WindowsNightSky" type="Sprite2D" parent="night_scene"]
position = Vector2(-4.57764e-05, -201.5)
scale = Vector2(0.775, 0.643333)
texture = ExtResource("5_mn4my")

[node name="Sprite2D" type="Sprite2D" parent="night_scene"]
texture = ExtResource("3_hxwy1")

[node name="moon" type="Sprite2D" parent="night_scene"]
position = Vector2(-784, -80)
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_xbrxs")

[node name="button_skip" type="Button" parent="night_scene"]
offset_left = -200.0
offset_top = 480.0
offset_right = 200.0
offset_bottom = 516.0
text = "skip night"
metadata/_edit_use_anchors_ = true

[node name="WindowFrame" type="Sprite2D" parent="night_scene"]
visible = false
position = Vector2(1.90735e-06, -200)
scale = Vector2(0.775, 0.636667)
texture = ExtResource("4_1vrvo")

[node name="Timer" type="Timer" parent="night_scene"]
wait_time = 9.037
autostart = true
script = ExtResource("1_nbex0")

[connection signal="tree_entered" from="night_scene" to="night_scene" method="_on_tree_entered"]
[connection signal="pressed" from="night_scene/button_skip" to="night_scene" method="_on_button_pressed"]
[connection signal="timeout" from="night_scene/Timer" to="night_scene" method="_on_timer_timeout"]
